# cex

./: .gitignore  CMakeLists.txt  inject++.code-workspace  jai_notes.txt  llvm_ninja.sublime-build_bak  notes.txt  questions.txt  roadmap.tasks  shared.cmake  test.cpp  todays.tasks
inject++/: CMakeLists.txt
inject++/lib/: CMakeLists.txt
inject++/lib/include/libInject/: libInject.h
inject++/lib/include/libInject/hooks/: macro_approach.h  pragma_approach.h
inject++/lib/include/libInject/hooks/pragma_approach/: HookPragmaHandler.cpp
inject++/lib/src/: CMakeLists.txt  libInject.cpp
inject++/test/: CMakeLists.txt
inject++/test/src/: test.cpp
inject++/tool/: CMakeLists.txt
inject++/tool/include/: matchers.h
inject++/tool/include/MatchCallbacks/: AnnotatedFunctionCallback.h
inject++/tool/src/: CMakeLists.txt  main.cpp
inject++/tool/src/MatchCallbacks/: AnnotatedFunctionCallback.cpp
lib/: CMakeLists.txt  Link to lib
lib/include/libCEX/hooks/: macro_approach.h
lib/include/libCEX/hooks/pragma_approach/: HookPragmaHandler.h
lib/src/: libCEX.cpp
malius/libs/assert/include/malius/: assert.hpp
malius/libs/assert/include/malius/assert/: Assert.hpp  SourceInfo.deprecated.hpp
malius/libs/assert/src/: Assert.cpp
malius/libs/bitarray/include/malius/: BitArray.hpp
malius/libs/bitarray/src/: BitArray.cpp
malius/libs/config/: CMakeLists.txt
malius/libs/config/include/malius/: Config.hpp
malius/libs/config/include/malius/config/: ConfigSettingInt.hpp  ConfigSettings.hpp
malius/libs/config/src/: ConfigSettingInt.cpp
malius/libs/core/: CMakeLists.txt  README.md
malius/libs/core/include/malius/core/: NotImplementedException.hpp  breakpoint.hpp  lang.hpp  pointerUtil.h  safe_static_cast.hpp
malius/libs/core/include/malius/core/math/: pow2.h
malius/libs/core/include/malius/templates/: require.h
malius/libs/core/include/malius/utility/: force_symbol_link.hpp
malius/libs/core/src/: force_symbol_link.cpp
malius/libs/engine/include/algorithm/: Flags.hpp  Hash.hpp
malius/libs/engine/include/algorithm/_flags/: flags.hpp
malius/libs/engine/include/algorithm/_flags/detail/: flags.hpp
malius/libs/engine/include/common/: Assert.inl  Common.deprecated.hpp  Memory.hpp  exports.hpp
malius/libs/engine/include/containers/: BitArray.hpp  Flags.hpp
malius/libs/engine/include/containers/helpers/: StringFormat.hpp
malius/libs/engine/include/core/: Engine.hpp  _GameEntity.hpp
malius/libs/engine/include/core/components/: RenderComponent.hpp
malius/libs/engine/include/core/platform/: Platform.hpp  WindowsPlatform.hpp
malius/libs/engine/include/engine/: Engine.hpp
malius/libs/engine/include/engine/systems/ai/: AIComponent.hpp
malius/libs/engine/include/engine/systems/physics/: PhysicsComponent.hpp
malius/libs/engine/include/engine/systems/rendering/: RenderComponent.hpp
malius/libs/engine/include/graphics/: ParticleSystem.hpp  RHI.hpp
malius/libs/engine/include/log/: Debug.deprecated.hpp  DebugMessage.deprecated.hpp  Logger.deprecated.hpp  SourceInfo.deprecated.hpp  new_class.cpp  new_class.h
malius/libs/engine/include/master/: RAII_example.hpp  sample_class_dll.hpp  sample_class_lib-inl.hpp  sample_dll.hpp
malius/libs/engine/include/master/events/: Delegate.hpp  Delegate_stackexchange.hpp  Event.hpp  Event2.hpp  MulticastDelegate.hpp  SmartDelegate.hpp  SmartMulticastDelegate.hpp
malius/libs/engine/include/platform/: GenericPlatform.hpp  WindowsPlatform.hpp
malius/libs/engine/include/preprocessor/: Preprocessor.hpp  preprocessor_temp_test.hpp
malius/libs/engine/include/templates/: Singleton.hpp
malius/libs/engine/src/: new_class.cpp  sample_class_dll.cpp  sample_dll.cpp
malius/libs/engine/src/core/: RenderComponent.cpp
malius/libs/engine/src/log/: Logger.deprecated.cpp
malius/libs/engine/src/types/: BitArray.cpp
malius/libs/engine/tests/include/: DelegateTestedClass.hpp  FlagsTest.hpp  QueueTest.hpp
malius/libs/engine/tests/src/: Delegate.tests.cpp  Event.tests.cpp  Flags.tests.cpp  MulticastDelegate.tests.cpp  SREvent_UnitTest.cpp  SmartDelegate.tests.cpp  SmartMulticastDelegate.tests.cpp  sample_class_dll.tests.cpp  sample_class_lib.tests.cpp  sample_dll.tests.cpp
malius/libs/ext/: README.md
malius/libs/log/: CMakeLists.txt
malius/libs/log/include/malius/log/: Logger.hpp  LoggerPolicies.inl  Message.hpp  SourceInfo.hpp
malius/libs/log/src/: Logger.cpp
malius/libs/log/tests/src/: log.tests.cpp
malius/libs/memory/include/malius/memory/: alloc.h  new.h
malius/libs/predef/: readme.md
malius/libs/predef/include/malius/: predef.hpp
malius/libs/predef/include/malius/predef/: compiler.hpp  os.hpp  platform.hpp  pragma_once.hpp  version_number.h
malius/libs/preprocessor/include/malius/: preprocessor.hpp
malius/libs/preprocessor/include/malius/preprocessor/: Apply.hpp  arithmetic.hpp  cat.hpp  comparison.hpp  debug.hpp  dec.hpp  empty.hpp  expand.hpp  expansion.hpp  facilities.hpp  for_each.hpp  inc.hpp  stringize.hpp
malius/libs/preprocessor/tests/src/: preprocessor.tests.cpp
malius/libs/utility/include/malius/: force_symbol_link.hpp
malius/libs/utility/src/: force_symbol_link.cpp
plugin/: CMakeLists.txt  Link to Transforms
plugin/include/: AggregationPass.h  ExecutionPass.h
plugin/src/: AggregationPass.cpp  ExecutionPass.cpp
test/: CMakeLists.txt
test/src/: test.cpp
tool/: CMakeLists.txt  Link to extra  llvm_libs.cmake
tool/include/: Compiler.h  ComplieTimeRunParser.h  matchUtility.h  utils.h
tool/include/Actions/: FindNamedFunctionAction.h
tool/include/cex/: CompileTimeRunner.h  Compiler.h  FileSizeParser.h  JIT.h  binding_ids.h  matchers.h  setupCompilerInstance.h  tmp.h
tool/include/cex/Actions/: EmitBitcodeAction.h
tool/include/cex/MatchCallbacks/: AnnotatedFunctionCallback.h  NamedFunctionCallback.h
tool/resources/: main.cpp.in
tool/src/: CompileTimeRunner.cpp  JIT.cpp  config.cpp  main.cpp  utils.cpp
tool/src/Actions/: EmitBitcodeAction.cpp  FindNamedFunctionAction.cpp
tool/src/MatchCallbacks/: AnnotatedFunctionCallback.cpp  NamedFunctionCallback.cpp
(+50 files in other folders)
